# ot-harjoitustyo

./: .gitignore  README.md
caravan/: .env  .env.test  .pylintrc  pyproject.toml  tasks.py
caravan/dokumentaatio/: Testausdokumentti.md  arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
caravan/src/: actions.py  config.py  db_connection.py  gameloop.py  init_db.py  main.py  rules.py
caravan/src/assets/minime453/: COPYRIGHT
caravan/src/entities/: caravan.py  card.py  cardset.py  deck.py  npc.py  player.py  player_data.py
caravan/src/repositories/: player_data_repository.py
caravan/src/tests/: gameloop_test.py  rules_test.py
caravan/src/tests/entities/: cardset_test.py  deck_test.py  npc_test.py  player_data_test.py  player_test.py
caravan/src/tests/repositories/: player_data_repository_test.py
caravan/src/ui/: deck_creation.py  gameboard.py  gamesprites.py  instructions.py  renderer.py  save_selection.py
caravan/src/ui/sprites/: card.py
caravan/src/ui/states/: caravanplacement.py  handselection.py
caravan/src/ui/text/: game_interface.py
dokumentaatio/: vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssi.md  sekvenssi2.md
