[tool.poetry]
name = "caravan"
version = "0.1.0"
description = ""
authors = ["Wincewind <86107954+Wincewind@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.2"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
