[tool.poetry]
name = "caravan"
version = "0.1.0"
description = ""
authors = ["Wincewind <86107954+Wincewind@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
pygame = "^2.3.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.2"
pytest = "^7.2.2"
pylint = "^2.17.2"
autopep8 = "^2.0.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
